fix: #249 change accent color to lighter for better contrast in dark mode

--- a/src/common/themes.css
+++ b/src/common/themes.css
@@ -77,7 +77,7 @@
 
 .__NoScript_Theme__, .__NoScript_Theme__[data-theme="dark"] {
   color-scheme: dark;
-  --accent-color: #d12027;
+  --accent-color: #ffb366;
   --fg-color1: #ccc;
   --fg-color2: #fff;
   --text-color: #ddd;
